--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,5 @@
-/test export-ignore
+/tests export-ignore
+.travis.yml export-ignore
+composer.* export-ignore
 .gitattributes export-ignore
 .gitignore export-ignore
